--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="css/style.css"
 </head>
 <body>
     
+    <p>
+        <span id="red-span">CSS</span>
+        <span id="blue-span"> jest</span> 
+        <span id="green-span">wspaniały</span>
+    </p>
+    
+    <div class="colorUnits">
+        <p id="p1">jakiś tekst</p>
+        <p id="p2">jakiś tekst</p>
+        <p id="p3">jakiś tekst</p>
+    </div>
+    <div class="container">
+        <p class="first-paragraph">dowolny tekst</p>
+        <p class="second-paragraph">dowolny tekst</p>
+    </div>
 </body>
 </html>
